--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa habilitar o javascript para acessar essa página.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
